--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,5 @@
-# macOS
-.DS_Store
-
-# Node / Next.js
 web/node_modules/
 web/.next/
-web/.env.local
-web/.env.production
-web/.env.development
-
-# General Node
-node_modules/
-.npm/
-
-# PHP uploads and cache
 uploads/
-
-# Environment secrets
 .env
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Editor
-.vscode/
-.idea/
+*.log
